# app

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
api/src/wallet/: balance.rs  keys.rs  mod.rs  network.rs  storage.rs  transaction.rs
desktop/: Cargo.toml
desktop/src/: main.rs
mobile/: Cargo.toml
ui/: Cargo.toml
ui/src/: echo.rs  hero.rs  lib.rs  navbar.rs
ui/src/wallet/: balance_card.rs  mod.rs  node_console.rs  quick_actions.rs  receive_view.rs  send_form.rs  transaction_list.rs
web/: Cargo.toml
