[workspace]
resolver = "2"
members = ["ui", "web", "desktop", "mobile", "api"]

[workspace.dependencies]
dioxus = { version = "0.6.0", default-features = false }

# workspace
ui = { path = "ui" }
api = { path = "api" }

# Full nockchain integration - all crates from the official repository
nockchain = { git = "https://github.com/zorp-corp/nockchain", branch = "master", default-features = false }
nockchain-wallet = { git = "https://github.com/zorp-corp/nockchain", branch = "master", default-features = false }
nockchain-libp2p-io = { git = "https://github.com/zorp-corp/nockchain", branch = "master" }
nockchain-bitcoin-sync = { git = "https://github.com/zorp-corp/nockchain", branch = "master" }
nockapp = { git = "https://github.com/zorp-corp/nockchain", branch = "master" }
nockvm = { git = "https://github.com/zorp-corp/nockchain", branch = "master" }
nockvm_macros = { git = "https://github.com/zorp-corp/nockchain", branch = "master" }
# kernels = { git = "https://github.com/zorp-corp/nockchain", branch = "master" } # Temporarily disabled due to missing .jam assets
zkvm-jetpack = { git = "https://github.com/zorp-corp/nockchain", branch = "master" }

# Crypto and blockchain dependencies - real implementations
ed25519-dalek = { version = "2.1.0", features = ["std", "rand_core"] }
curve25519-dalek = { version = "4.1.3" }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = { version = "0.10.8", features = ["std"] }
sha3 = { version = "0.10.8", features = ["std"] }
blake3 = { version = "1.5.1", features = ["std", "serde"] }
bs58 = "0.5.1"

# Additional crypto libraries that nockchain uses
secp256k1 = { version = "0.29.0", features = ["std", "recovery", "rand-std"] }
bip39 = { version = "2.0.0", features = ["std"] }
hkdf = "0.12.4"
hmac = "0.12.1"
ripemd = "0.1.3"

# Serialization and data
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.104"
bincode = "2.0.0-rc.3"
byteorder = "1.5.0"

# Async and networking
tokio = { version = "1.32", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "rt",
    "signal",
    "process",
    "sync",
] }
futures = "0.3.31"
libp2p = { version = "0.55.0" }

# Error handling and utilities
anyhow = "1.0"
thiserror = "2.0.11"
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8.5"
hex = "0.4"
which = "6.0"

# Logging
log = "0.4"

# Nockchain-style serialization and computation
nom = "7.1.3"
ibig = { version = "0.3.6", features = ["serde"] }

# UI and QR codes
qrcode = "0.13"
image = "0.24.7"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
