[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["hooks", "signals", "macro", "html"] }
api = { workspace = true }

# UI and styling
qrcode = { workspace = true }
image = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
